src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Amount_same_as_proposal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amount same as proposal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Standing__c</fullName>
        <description>Here is where you determine if the grant is open and active, in the midst of being appoved or all finished and closed.</description>
        <label>Current Standing</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Approval Process</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Contract Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( TEXT(MONTH( StartDate ))) = 0, &quot;Contract Start Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(  TEXT(ContractTerm)) = 0, &quot;Contract Term, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( BillingCity ) = 0, &quot;Complete Contract Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( CustomerSignedId ) = 0, &quot;Customer Signature, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(  OwnerExpirationNotice ,&quot;&quot;), &quot;Owner Expiration Notice&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN(TEXT(MONTH(StartDate)))=0, 0,20) + IF( LEN(TEXT( ContractTerm ))=0, 0,20) + IF( LEN( BillingCity ) = 0, 0,20) + IF( LEN( CustomerSignedId) = 0, 0,20) + IF( ISPICKVAL(  OwnerExpirationNotice ,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Awarded__c</fullName>
        <label>Date Awarded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Final_Financial_Reporting_Date__c</fullName>
        <label>Final Financial Reporting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Programmatic_Reporting_Date__c</fullName>
        <label>Final Programmatic Reporting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Final_Send_date__c</fullName>
        <label>Final Financial Report Send date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Interim_Send_date__c</fullName>
        <label>Interim Financial Report Send date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Reporting_Date_Interim__c</fullName>
        <label>Interim Financial Reporting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Reporting_Requirements__c</fullName>
        <label>Financial Reporting Requirements</label>
        <picklist>
            <picklistValues>
                <fullName>Actuals Against Approved Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actuals Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Narratives Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grant_Code__c</fullName>
        <label>Grant Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Name__c</fullName>
        <label>Grant Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Summary__c</fullName>
        <label>Grant Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Grant_Type__c</fullName>
        <label>Grant Type</label>
        <picklist>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pledge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_amount_not_same_as_proposal_describe__c</fullName>
        <label>If amount not same as proposal, describe</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_other_requirements_describe__c</fullName>
        <label>If other requirements describe</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Interim_Financial_Reporting_Date_2__c</fullName>
        <label>Interim Financial Reporting Date #2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interim_Financial_Reporting_Date_3__c</fullName>
        <label>Interim Financial Reporting Date #3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interim_Programmatic_Report_Send_Date__c</fullName>
        <label>Interim Programmatic Report Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interim_Programmatic_Reporting_Date_2__c</fullName>
        <label>Interim Programmatic Reporting Date #2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interim_Programmatic_Reporting_Date_3__c</fullName>
        <label>Interim Programmatic Reporting Date #3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interim_Programmatic_Reporting_Date__c</fullName>
        <label>Interim Programmatic Reporting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payments__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payments</label>
        <referenceTo>Old_Payments__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>R00N30000001O8jaEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Final_Report_Send_Date__c</fullName>
        <label>Final Programmatic Report Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Programmatic_Reporting_Date_Other__c</fullName>
        <label>Programmatic Reporting Date Other</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Solicitation_Response__c</fullName>
        <label>Solicitation Response</label>
        <picklist>
            <picklistValues>
                <fullName>Earthshare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pet Memorial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trustee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Site</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Awarded__c</fullName>
        <label>Total Awarded</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllGrants</fullName>
        <columns>Grant_Code__c</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>Grant_Name__c</columns>
        <columns>Payments__c</columns>
        <columns>CONTRACT.RECORDTYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Grants</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllGrantsbyReportingDates</fullName>
        <columns>Grant_Code__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>Financial_Reporting_Date_Interim__c</columns>
        <columns>Final_Financial_Reporting_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Grants by Reporting Dates</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>InstitutionalGrants</fullName>
        <columns>Grant_Code__c</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>Grant_Name__c</columns>
        <columns>Payments__c</columns>
        <columns>CONTRACT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract.GrantsbyInstitution</value>
        </filters>
        <label>Institutional Grants</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <recordTypes>
        <fullName>GrantbyIndividual</fullName>
        <active>true</active>
        <description>a grant or restricted gift given by an individual donor</description>
        <label>Grant by Individual</label>
    </recordTypes>
    <recordTypes>
        <fullName>GrantsbyInstitution</fullName>
        <active>true</active>
        <description>grants or restricted gifts given by an institution</description>
        <label>Grants by Institution</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>